# mycat-template

./: CMakeLists.txt  README.md
.github/workflows/: codeql-analysis.yml  macos.yml  ubuntu.yml  windows.yml
inc/cat/: cat.hpp
src/: main.cpp  signal_bomber.cpp
src/cat/: cat.cpp
tests/: runtests.sh  smallfile.txt
